# AgentWorld

./: .gitignore  README.md  TEST_PLAN.md  TEST_RESULTS.md  VALUE_PROPOSITION.md  pyproject.toml
.claude/agents/: adr-compliance-checker.md
.claude/hooks/: auto_update_tracker.py  inject_adr_reminder.py  session_adr_context.sh  track_adr_changes.sh  update_tracker.py
adrs/: ADR-001-framework-inspiration.md  ADR-002-agent-scale.md  ADR-003-llm-architecture.md  ADR-004-trait-vector-persona.md  ADR-005-network-topology.md  ADR-006-dual-memory.md  ADR-007-visualization.md  ADR-008-persistence.md  ADR-009-use-case-scenarios.md  ADR-010-evaluation-metrics.md  ADR-011-simulation-runtime.md  ADR-012-api-event-schema.md  ADR-013-security.md  ADR-014-plugin-extension.md  ADR-015-reasoning-visibility.md  ADR-016-agent-injection.md  ADR-017-research-comparison.md  ADR-017-simulated-apps.md  ADR-018-app-studio-backend.md  ADR-019-app-definition-schema.md  ADR-020-app-benchmark-evaluation.md  ADR-020-tau-bench-evaluation.md  ADR-020.1-dual-control-extension.md  ADR-021-app-benchmark-evaluation.md  IMPLEMENTATION_TRACKER.md  README.md  UI-ADR-001-design-system.md  UI-ADR-002-information-architecture.md  UI-ADR-003-simulation-control.md  UI-ADR-004-realtime-visualization.md  UI-ADR-005-cli-design.md  UI-ADR-006-persona-builder.md  UI-ADR-007-results-analysis.md  UI-ADR-008-experiments.md  UI-ADR-009-app-studio-library.md  UI-ADR-010-app-creation-wizard.md  UI-ADR-011-visual-logic-builder.md  UI-ADR-012-app-test-sandbox.md  UI-ADR-013-simulation-app-integration.md
adrs/feedback/: ADR-001-framework-inspiration.feedback.md  ADR-002-agent-scale.feedback.md  ADR-003-llm-architecture.feedback.md  ADR-004-trait-vector-persona.feedback.md  ADR-005-network-topology.feedback.md  ADR-006-dual-memory.feedback.md  ADR-007-visualization.feedback.md  ADR-008-persistence.feedback.md  ADR-009-use-case-scenarios.feedback.md  ADR-010-evaluation-metrics.feedback.md
docs/: ADR-020-GAP-ANALYSIS-TAU2.md  AGENTWORLD_FEATURE_SHOWCASE.md  AGENT_BENCHMARK_COMPARISON.md  UI-WIREFRAMES-DUAL-CONTROL.md  UX-TEST-PLAN-GOALS-COORDINATION.md  agentworld-adr-review.jsx
examples/: paypal_simulation.yaml  two_agents.yaml
scripts/: verify_phase1.py  verify_phase2.py
src/agentworld/: __init__.py  __main__.py
tests/: TEST_BACKLOG.md  __init__.py  conftest.py
tests/agents/: test_agent.py
tests/api/: test_api_endpoints.py  test_app_definitions.py  test_dual_control.py  test_websocket.py
tests/apps/: __init__.py  test_definition.py  test_dual_control_apps.py  test_dynamic.py  test_environment_wrapper.py  test_expression.py  test_logic_engine.py  test_parser.py  test_paypal.py  test_registry.py
tests/cli/: test_config.py
ui-spec/: agentworld-ui-spec-v0.md  agentworld-ui-spec-v1.md
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+312 files in other folders)
